url render correta

--- a/index.html
+++ b/index.html
@@ -1855,7 +1855,7 @@
         // ============================================
         const CONFIG = {
             // 🔒 URL do backend no Render
-            backendUrl: 'https://bebcom-backend.onrender.com',
+            backendUrl: 'https://bebcom-cardapio-delivery.onrender.com',
 
             whatsappNumber: '5514996130369',
 
